refactor: remove obsolete engineering sample APIs
